Apply new background, fix wrong computing in progress bars.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+/.firebase/hosting.ZGlzdFx0aG91c2FuZENhcmRHYW1l.cache
+/.firebase/hosting.ZGlzdA.cache
+/1000cardGame.iml
